--- a/app/composer.json
+++ b/app/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "iu-msis/2-simple=docker-js-lukepillarella51",
-    "description": "HW #7",
+    "name": "iu-msis/project-triage-2020",
+    "description": "Homework Assignments",
     "license": "private",
     "authors": [{
         "name": "Luke Pillarella"
